# llm-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile.frontend  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_chat_realization.py  0003_writing_module.py  0004_writing_blank_documents.py
backend/app/: __init__.py  main.py  models.py  schemas.py  seed.py
backend/app/api/: router.py  security.py  utils.py
backend/app/api/routes/: api_keys.py  approvals.py  audits.py  auth.py  chat.py  documents.py  health.py  knowledge_bases.py  llm_tasks.py  messages.py  model_configs.py  ops.py  reports.py  users.py  writing.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/services/: llm_client.py  rag_service.py  writing_service.py
backend/scripts/: verify_api.py
backend/storage/chroma/: chroma.sqlite3
backend/storage/seed_documents/: nist_ai_rmf_summary.md  noaa_underwater_sound_summary.md  python_pep8_operational_summary.md
backend/tests/: test_api.py  test_llm_client.py
deploy/: nginx.conf
docs/: docker-linux-deploy.md
src/: App.tsx  AppContext.tsx  index.css
src/components/: MainLayout.tsx  PageHeader.tsx
src/mocks/: seed.ts
src/pages/: AIOffice.tsx  AcousticKB.tsx  Admin.tsx  AdminModels.tsx  AdminOpenApi.tsx  ApprovalsMy.tsx  ApprovalsTodo.tsx  ArchivedChats.tsx  Audit.tsx  Chat.tsx  CodeGen.tsx  (+13 more)
(+4 files in other folders)
